--- a/sample_experiments/manual_extraction.ipynb
+++ b/sample_experiments/manual_extraction.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -28,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,16 +117,16 @@
     }
    ],
    "source": [
-    "ear_data = pd.read_csv('data/sample_ear_short.csv')\n",
+    "ear_data = pd.read_csv(\"data/sample_ear_short.csv\")\n",
     "display(ear_data.head())\n",
     "\n",
-    "ear_l = ear_data['EAR_l'].values\n",
-    "ear_r = ear_data['EAR_r'].values"
+    "ear_l = ear_data[\"EAR_l\"].values\n",
+    "ear_r = ear_data[\"EAR_r\"].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -158,12 +149,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Manual Definition of Blinking State"
+    "----"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,13 +274,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be01cb33fcb94794bf69a667288401e7",
+       "model_id": "e0764bf3599f467dbd1d4c58eca97f1b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -312,16 +303,7 @@
     "    noise=[False, True],\n",
     ")\n",
     "def g(sig1, sig2, prominance, apex_location, window_size, noise):\n",
-    "    prototype, params = espbm.manual.define_prototype(\n",
-    "        sig1=sig1,\n",
-    "        sig2=sig2,\n",
-    "        baseline=0.3,\n",
-    "        prominance=prominance,\n",
-    "        apex_location=apex_location,\n",
-    "        window_size=window_size,\n",
-    "        noise=noise,\n",
-    "        return_params=True\n",
-    "    )\n",
+    "    prototype, params = espbm.manual.define_prototype(sig1=sig1, sig2=sig2, baseline=0.3, prominance=prominance, apex_location=apex_location, window_size=window_size, noise=noise, return_params=True)\n",
     "    espbm.plot.manual_prototype(prototype=prototype, params=params)\n",
     "    plt.show()"
    ]
@@ -329,7 +311,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "espbm",
    "language": "python",
    "name": "python3"
   },
