--- a/sample_experiments/unsupervised_extraction.ipynb
+++ b/sample_experiments/unsupervised_extraction.ipynb
@@ -117,11 +117,11 @@
     }
    ],
    "source": [
-    "ear_data = pd.read_csv('data/sample_ear_short.csv')\n",
+    "ear_data = pd.read_csv(\"data/sample_ear_short.csv\")\n",
     "display(ear_data.head())\n",
     "\n",
-    "ear_l = ear_data['EAR_l'].values\n",
-    "ear_r = ear_data['EAR_r'].values"
+    "ear_l = ear_data[\"EAR_l\"].to_numpy()\n",
+    "ear_r = ear_data[\"EAR_r\"].to_numpy()"
    ]
   },
   {
@@ -161,7 +161,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/buechner/anaconda3/envs/espbm/lib/python3.10/site-packages/numba/np/ufunc/parallel.py:371: NumbaWarning: The TBB threading layer requires TBB version 2021 update 6 or later i.e., TBB_INTERFACE_VERSION >= 12060. Found TBB_INTERFACE_VERSION = 12050. The TBB threading layer is disabled.\n",
+      "/home/buechner/anaconda3/envs/espbm/lib/python3.10/site-packages/numba/np/ufunc/parallel.py:371: NumbaWarning: \u001b[1mThe TBB threading layer requires TBB version 2021 update 6 or later i.e., TBB_INTERFACE_VERSION >= 12060. Found TBB_INTERFACE_VERSION = 12050. The TBB threading layer is disabled.\u001b[0m\n",
       "  warnings.warn(problem)\n"
      ]
     }
@@ -450,7 +450,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ebpm",
+   "display_name": "espbm",
    "language": "python",
    "name": "python3"
   },
